# s1t

./: .gitignore  BUILD  README.md  WORKSPACE  dimacs_parser.go  dimacs_parser_test.go  problem_spec.go  solution.go  solver.go  solver_test.go
cmd/: BUILD.bazel  s1t.go
test_cnf/: queen3.cnf  queen4.cnf  subsetsum2.cnf  subsetsum2b.cnf  subsetsum3.cnf
test_generator/sudoku/: BUILD.bazel  sudoku.go  sudoku_test.go
test_generator/sudoku/test_data/: multi_solution.txt
