load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["sudoku.go"],
    importpath = "github.com/jvoung/s1t/test_generator/sudoku",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "sudoku",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
